--- a/Server/package.json
+++ b/Server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "mqtt.js",
   "dependencies": {
+    "dateformat": "^4.0.0",
     "mqtt": "^4.2.4"
   },
   "devDependencies": {},
